fixed bug social networks were not visible, changed diaplay and text-aligh value

--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ a:visited {
   opacity: 50%;
 }
 
-.about_img1 img:hover {
+.about_img img:hover {
   opacity: 100%;
 }
 
@@ -511,8 +511,10 @@ section label {
     text-align: center;
   }
   .socialnetwork {
-    display: none;
+    display: block;
+    margin: auto;  
   }
+  
   .bar {
     display: block;
   }
@@ -596,5 +598,6 @@ section label {
     width: 50px;
     height: 50px;
     margin-top: 10px;
-  };
+  }
+
 }
